--- a/client/package.json
+++ b/client/package.json
@@ -11,18 +11,23 @@
   "dependencies": {
     "@perawallet/connect": "^1.4.2",
     "@radix-ui/react-accordion": "^1.2.12",
+    "@radix-ui/react-avatar": "^1.1.1",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-slot": "^1.2.3",
     "@tsparticles/engine": "^3.9.1",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.9.1",
     "@txnlab/use-wallet": "^4.3.1",
+    "@txnlab/use-wallet-react": "^4.3.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^10.18.0",
     "lucide-react": "^0.544.0",
+    "lute-connect": "^1.6.2",
     "next": "14.2.8",
     "react": "^18",
     "react-dom": "^18",
+    "recharts": "^2.8.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7"
   },
